--- a/src/Components/CardGrid.css
+++ b/src/Components/CardGrid.css
@@ -1,19 +1,29 @@
 .CardGrid{
-    height: 150px;
-    max-width: 350px;
+    height: 125px;
     margin-left: auto;
     margin-right: auto;
 }
 .Card{
     height:125px ;
-
-    background-image: url(../card1.png);
     width: 101px;
 }
 .textdiv{
     margin: 5px;
-    font-size: 12px;
+    font-size: 11px;
     color:white;
     font-family: var(--vkui--font_family_accent);
-    
+    width: 90%;
+    height: 100%;
+}
+#card_1{
+    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),no-repeat center/190%  url("../img/card1.jpg");
+
+}
+#card_2{
+    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),no-repeat center/190%  url("../img/card2.jpg");
+
+}
+#card_3{
+    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),no-repeat center/190%  url("../img/card3.jpg");
+
 }
